about section - gleiche länge

--- a/index.html
+++ b/index.html
@@ -80,42 +80,34 @@
             <div class="about-item">
               <h3>Informationen und Fakten</h3>
               <p>
-                In der heutigen Informationsflut gehen die wirklich wichtigen
-                Fakten oft unter oder werden schnell vergessen. Viele
-                Entscheidungen basieren auf oberflächlichen Eindrücken, ohne die
-                entscheidenden Hintergründe zu berücksichtigen.
+                Wichtige Fakten verschwinden oft im Informationschaos – wir
+                graben sie aus, damit Sie Klarheit gewinnen.
               </p>
               <p>
-                Wir bündeln wir für Sie die relevanten und oft übersehenen
-                Kontroversen, damit Sie schnell einen klaren Überblick erhalten.
+                Wir liefern übersehene Hintergründe kompakt, für einen schnellen
+                Überblick ohne oberflächlichen Ballast.
               </p>
             </div>
             <div class="about-item">
               <h3>Kontroversen</h3>
               <p>
-                Politische Skandale werden häufig verharmlost oder verschwiegen,
-                obwohl sie essentielle Informationen zu den wahren Handlungen
-                und Haltungen von Politikern liefern.
+                Skandale werden verharmlost oder vertuscht – wir decken sie auf,
+                um Politiker zu entlarven.
               </p>
               <p>
-                Wir bieten Ihnen eine umfassende Sammlung aller relevanten
-                Skandale, damit Sie ein differenziertes Bild der politischen
-                Landschaft erhalten und informierte Entscheidungen treffen
-                können.
+                Unsere Sammlung zeigt die wahre Natur der Politik, für Ihr
+                klares Bild und Urteil.
               </p>
             </div>
-
             <div class="about-item">
               <h3>Aktualität</h3>
               <p>
-                Politische Ereignisse entwickeln sich ständig weiter, aber viele
-                Menschen haben Schwierigkeiten, den Überblick zu behalten und zu
-                erkennen, was wirklich von Bedeutung ist.
+                Politische Entwicklungen überfordern oft – wir filtern das
+                Wesentliche, damit Sie mitreden können.
               </p>
               <p>
-                Wir halten Sie stets auf dem neuesten Stand und liefern Ihnen
-                die entscheidenden Informationen zu aktuellen politischen
-                Themen, damit Sie immer informiert bleiben.
+                Aktuelle Infos, präzise und relevant, halten Sie stets auf dem
+                Laufenden ohne Umwege.
               </p>
             </div>
           </div>
