--- a/cducsu/merz/index.html
+++ b/cducsu/merz/index.html
@@ -186,7 +186,7 @@
             <a
               href="https://www.zdf.de/nachrichten/politik/deutschland/merz-schulden-kehrtwende-finanzpolitik-100.html"
               target="_blank"
-              >Merz' Wende in der Schuldenpolitik</a
+              >ZDFheute: Merz' Wende in der Schuldenpolitik: Whatever it takes</a
             >
           </p>
 
