cdu timeline anschläge

--- a/cducsu/index.html
+++ b/cducsu/index.html
@@ -186,56 +186,58 @@
             <p>
               Die folgende Liste enthält nur einige ausgewählte Beispiele. Es gibt etliche weitere Vorfälle, die hier nicht aufgeführt sind.
             </p>
-                       <ul>
-           <li>
-            <strong>Sommer 2015:</strong> Starker Anstieg der Flüchtlingszahlen, Zuspitzung der Lage an den Grenzen.
-           </li>
-           <li>
-            <strong>4. September 2015:</strong> Grenzöffnung durch
-            Deutschland und Österreich.
-            </li>
-                             <li>
-           <strong>26. Februar 2016:</strong> Messerangriff auf eine Polizistin in <strong>Eisenach</strong> durch einen 22-jährigen Asylbewerber aus Eritrea.
-            </li>
-            <li>
-            <strong>Dezember 2016:</strong> <strong>Breitscheidplatz-Anschlag in Berlin</strong>. Anis Amri, ein tunesischer Asylbewerber, fährt einen LKW in einen Weihnachtsmarkt, tötet 12 Menschen und verletzt viele weitere.
-            </li>
-            <li>
-           <strong>24. Juli 2016:</strong>  <strong>Anschlag in Ansbach</strong>. Ein syrischer Asylbewerber zündet eine Bombe vor einem Musikfestival und tötet sich selbst, 15 Menschen werden verletzt.
-            </li>
-           <li>
-           <strong>18. Juli 2016:</strong>  <strong>Axt-Angriff in der Würzburger Regionalbahn</strong>. Ein 17-jähriger Flüchtling aus Afghanistan greift Fahrgäste mit einer Axt und einem Messer an,  verletzt fünf Menschen schwer.
-            </li>
-           <li>
-            <strong>28. Juli 2017:</strong>  <strong>Messerangriff in Hamburg</strong>. Ein abgelehnter palästinensischer Asylbewerber tötet einen Menschen und verletzt mehrere in einem Supermarkt.
-            </li>
-            <li>
-           <strong>10. August 2018:</strong> <strong>Messerattacke in Aschaffenburg</strong> (2018): Ein 26-jähriger Afghane tötet einen Mann und verletzt mehrere Personen. 
-           </li>
-           <li>
-           <strong>21. Juni 2021:</strong>  <strong>Messerattacke in Würzburg</strong>. Ein 24-jähriger somalischer Asylbewerber tötet drei Frauen und verletzt mehrere Menschen.
-           </li>
-           <li>
-            <strong>31. Dezember 2022 Silvesternacht:</strong>  Krawalle und Angriffe auf Einsatzkräfte in mehreren deutschen Städten, insbesondere durch junge Männer mit Migrationshintergrund.
-            </li>
-            <li>
-           <strong>20. Juli 2023:</strong> <strong>Messerangriff in Magdeburg:</strong> Ein 27-jähriger Syrer tötet einen Mann und verletzt eine Frau in einem Park.
-           </li>
-           <li>
-           <strong>9. Mai 2024: Messerattacke in Solingen:</strong> Ein 31-jähriger Mann aus Guinea attackiert in einer Kita mehrere Kinder mit einem Messer, verletzt vier Kinder schwer.
-           </li>
-             <li>
-           <strong>20. Dezember 2024:</strong> <strong>Anschlag in Magdeburg:</strong> Taleb A. aus Saudi-Arabien rast durch den Weihnachtsmarkt und hinterlässt sechs Todesopfer sowie mehr als 300 Verletzte.
-           </li>
-           <li>
-           <strong>22. Januar 2025: Messerattacke in Aschaffenburg:</strong> Ein 28-jähriger Afghane greift eine Kindergruppe an, ein zweijähriger Junge und ein Mann,der helfen wollte, werden tödlich verletzt. 
-           </li>
-             <li>
-           <strong>13. Februar 2025:</strong> <strong>Anschlag in München:</strong>  Ein 24 Jahre alter Afghane, dessen Asylantrag abgelehnt wurde, rast in eine Gruppe von Demonstranten. Ein schwerverletztes Kind (2) und die Mutter (37) wurden dabei ermordet.
-           </li>
-           </ul>
-                     </div>
-
+            <ul>
+              <li>
+                <strong>Sommer 2015:</strong> Starker Anstieg der Flüchtlingszahlen, Zuspitzung der Lage an den Grenzen.
+              </li>
+              <li>
+                <strong>4. September 2015:</strong> Grenzöffnung durch Deutschland und Österreich.
+              </li>
+              <li>
+                <strong>26. Februar 2016:</strong> Messerangriff auf eine Polizistin in <strong>Hannover</strong> durch eine 15-jährige Deutsch-Marokkanerin mit IS-Sympathien.
+              </li>
+              <li>
+                <strong>18. Juli 2016:</strong> <strong>Axt-Angriff in der Würzburger Regionalbahn</strong>. Ein 17-jähriger Flüchtling aus Afghanistan greift Fahrgäste mit Axt und Messer an, verletzt fünf Menschen schwer.
+              </li>
+              <li>
+                <strong>24. Juli 2016:</strong> <strong>Anschlag in Ansbach</strong>. Ein syrischer Asylbewerber zündet eine Bombe vor einem Musikfestival, tötet sich selbst, 15 Menschen werden verletzt.
+              </li>
+              <li>
+                <strong>19. Dezember 2016:</strong> <strong>Breitscheidplatz-Anschlag in Berlin</strong>. Anis Amri, ein tunesischer Asylbewerber, fährt einen LKW in einen Weihnachtsmarkt, tötet 12 Menschen und verletzt viele weitere.
+              </li>
+              <li>
+                <strong>28. Juli 2017:</strong> <strong>Messerangriff in Hamburg</strong>. Ein abgelehnter palästinensischer Asylbewerber tötet einen Menschen und verletzt sechs in einem Supermarkt.
+              </li>
+              <li>
+                <strong>4. Oktober 2020:</strong> <strong>Messerangriff in Dresden</strong>. Ein 20-jähriger Syrer tötet einen Touristen und verletzt einen weiteren schwer, islamistisches Motiv.
+              </li>
+              <li>
+                <strong>21. Juni 2021:</strong> <strong>Messerattacke in Würzburg</strong>. Ein 24-jähriger somalischer Asylbewerber tötet drei Frauen und verletzt sechs Menschen.
+              </li>
+              <li>
+                <strong>31. Dezember 2022 Silvesternacht:</strong> Krawalle und Angriffe auf Einsatzkräfte in mehreren deutschen Städten, insbesondere durch junge Männer mit Migrationshintergrund.
+              </li>
+              <li>
+                <strong>20. Juli 2023:</strong> <strong>Messerangriff in Magdeburg</strong>. Ein 27-jähriger Syrer tötet einen Mann und verletzt eine Frau in einem Park.
+              </li>
+              <li>
+                <strong>31. Mai 2024:</strong> <strong>Messerangriff in Mannheim</strong>. Ein 25-jähriger Afghane tötet einen Polizisten und verletzt fünf Menschen bei einer islamkritischen Veranstaltung.
+              </li>
+              <li>
+                <strong>23. August 2024:</strong> <strong>Messerattacke in Solingen</strong>. Ein 26-jähriger Syrer tötet drei Menschen und verletzt acht bei einem Stadtfest, IS-Motiv.
+              </li>
+              <li>
+                <strong>20. Dezember 2024:</strong> <strong>Anschlag in Magdeburg</strong>. Taleb A. aus Saudi-Arabien rast durch den Weihnachtsmarkt, hinterlässt fünf Todesopfer sowie über 200 Verletzte.
+              </li>
+              <li>
+                <strong>22. Januar 2025:</strong> <strong>Messerattacke in Aschaffenburg</strong>. Ein 28-jähriger Afghane greift eine Kindergruppe an, tötet ein zweijähriges Kind und einen Mann.
+              </li>
+              <li>
+                <strong>13. Februar 2025:</strong> <strong>Anschlag in München</strong>. Ein 24-jähriger Afghane, abgelehnter Asylbewerber, rast in Demonstranten, tötet ein Kind (2) und die Mutter (37).
+              </li>
+            </ul>
+          </div>
+          
           <p class="party-highlight-hashtags">
             <span class="hashtag">#grenzoeffnung</span>
             <span class="hashtag">#migration</span>
@@ -243,7 +245,7 @@
             <span class="hashtag">#sicherheit</span>
             <a href="cducsu.html">#cducsu</a>
             <span class="hashtag">#merkel</span>
-          </p>
+          </p>          
          
         </div>
       </div>
