--- a/fdp/index.html
+++ b/fdp/index.html
@@ -213,6 +213,31 @@
       </div>
     </section>
 
+    <!-- Extra-Section -->
+    <section class="party-highlights">
+      <h2 class="party-section-title">Talkshow-Highlights</h2>
+
+      <p class="party-highlight-description">
+        Dem deutschen Bundestag fehlt eine liberale Kraft – leider hat die FDP
+        den Liberalismus abgeschafft. Nach der Bundestagswahl 2025 scheiterte
+        die Partei mit nur 4,3 % an der Fünf-Prozent-Hürde. Gründe dafür liegen
+        in den drei Jahren Ampel-Koalition, in denen sie ihre Glaubwürdigkeit
+        verspielte: Die FDP konnte sich wirtschaftspolitisch kaum profilieren,
+        wirkte durch den Koalitionsbruch („D-Day-Affäre“) unzuverlässig und
+        verlor durch die Fokussierung auf Parteichef Christian Lindner an
+        Breite. Die Mechanismen hinter diesem Absturz analysiert dieses Video.
+      </p>
+
+      <div class="video-container">
+        <iframe
+          src="https://www.youtube.com/embed/Z3afAS46zuQ?si=dPKIDV5ICcIOmW9c"
+          title="FDP ZERSTÖRT sich SELBST: Wieso das notwendig war | Prof. Dr. Christian Rieck"
+          frameborder="0"
+          allowfullscreen
+        ></iframe>
+      </div>
+    </section>
+
     <section class="party-members">
       <h2 class="party-section-title">Bekannte Mitglieder</h2>
       <ul class="party-members-list">
@@ -227,6 +252,5 @@
     </footer>
 
     <script src="../script.js"></script>
-
   </body>
 </html>
