fdp video titel

--- a/fdp/index.html
+++ b/fdp/index.html
@@ -215,7 +215,7 @@
 
     <!-- Extra-Section -->
     <section class="party-highlights">
-      <h2 class="party-section-title">Talkshow-Highlights</h2>
+      <h2 class="party-section-title">Aktuelle Analyse</h2>
 
       <p class="party-highlight-description">
         Dem deutschen Bundestag fehlt eine liberale Kraft – leider hat die FDP
