--- a/cducsu/merz/index.html
+++ b/cducsu/merz/index.html
@@ -127,7 +127,7 @@
       <h2 class="party-section-title">Skandale und Kontroversen</h2>
 
       <!-- Highlight: Schuldenbremse Versprechen gebrochen -->
-      <div class="party-highlight">
+      <div class="party-highlight" id="schuldenbremse">
         <h3 class="party-highlight-title">
           Schuldenbremse: Vom Hardliner zum Schuldenmacher
         </h3>
