--- a/fdp/index.html
+++ b/fdp/index.html
@@ -214,7 +214,7 @@
     </section>
 
     <!-- Extra-Section -->
-    <section class="party-highlights">
+    <section class="party-highlights" id="fdp-untergang">
       <h2 class="party-section-title">Aktuelle Analyse</h2>
 
       <p class="party-highlight-description">
