--- a/index.html
+++ b/index.html
@@ -72,6 +72,23 @@
         </div>
       </section>
 
+      <!-- News-Feed Section -->
+      <section id="news-feed" class="news-feed">
+        <h2>NEWS</h2>
+        <ul class="news-list">
+          <li>
+            <strong>9. März 2025:</strong> Merz' Kehrtwende zur Schuldenbremse
+            <a href="https://factico.eu/cducsu/merz/#schuldenbremse"
+              >Mehr lesen</a
+            >
+          </li>
+          <li>
+            <strong>9. März 2025:</strong> Der Untergang der FDP
+            <a href="https://factico.eu/#fdp-untergang">Mehr lesen</a>
+          </li>
+        </ul>
+      </section>
+
       <!-- About Section -->
       <section id="about" class="about">
         <article class="content-block">
