--- a/index.html
+++ b/index.html
@@ -77,13 +77,13 @@
         <h2>NEWS</h2>
         <ul class="news-list">
           <li>
-            <strong>9. März 2025:</strong> Merz' Kehrtwende zur Schuldenbremse
+            <strong>März 2025:</strong> Merz' Kehrtwende zur Schuldenbremse
             <a href="https://factico.eu/cducsu/merz/#schuldenbremse"
               >Mehr lesen</a
             >
           </li>
           <li>
-            <strong>9. März 2025:</strong> Der Untergang der FDP
+            <strong>März 2025:</strong> Der Untergang der FDP
             <a href="https://factico.eu/#fdp-untergang">Mehr lesen</a>
           </li>
         </ul>
