--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
           </li>
           <li>
             <strong>März 2025:</strong> Der Untergang der FDP
-            <a href="https://factico.eu/#fdp-untergang">Mehr lesen</a>
+            <a href="https://factico.eu/fdp/#fdp-untergang">Mehr lesen</a>
           </li>
         </ul>
       </section>
