--- a/fdp/index.html
+++ b/fdp/index.html
@@ -113,7 +113,7 @@
         </h3>
 
         <div class="highlight-skandal-scale">
-          <h4>Skala der Wählertäuschung: 6/10</h4>
+          <h4>Wählertäuschung: 6/10</h4>
           <div class="gradient-bar-container">
             <div class="gradient-bar-filled" style="width: 50%"></div>
             <div class="gradient-bar-unfilled" style="width: 50%"></div>
