--- a/cducsu/merz/index.html
+++ b/cducsu/merz/index.html
@@ -73,21 +73,22 @@
 
           <h3>Politische Laufbahn</h3>
           <p>
-            <strong>März 2025:</strong> Führender Kanzlerkandidat der Union nach
-            der Bundestagswahl 2025, Verhandlungen über Koalition und
-            Politikwechsel
+            <strong>März 2025:</strong> Führender Kanzlerkandidat der Union nach der Bundestagswahl 2025, Verhandlungen über Koalition und Politikwechsel (Stand März 2025)
           </p>
-          <p><strong>2022 – heute:</strong> Vorsitzender der CDU</p>
           <p>
-            <strong>2000 – 2002:</strong> Vorsitzender der
-            CDU/CSU-Bundestagsfraktion
+            <strong>2022 – heute:</strong> Vorsitzender der CDU
+          </p>
+          <p>
+            <strong>2002 – 2004:</strong> Stellvertretender Vorsitzender der CDU/CSU-Bundestagsfraktion (Rücktritt Dezember 2004)
+          </p>
+          <p>
+            <strong>2000 – 2002:</strong> Vorsitzender der CDU/CSU-Bundestagsfraktion und Oppositionsführer
+          </p>
+          <p>
+            <strong>1994 – 2009:</strong> Mitglied des Deutschen Bundestages (Wahlkreis Hochsauerlandkreis, bestes Ergebnis 2005 mit 57,7 %)
           </p>
           <p>
             <strong>1989 – 1994:</strong> Mitglied des Europäischen Parlaments
-          </p>
-          <p>
-            <strong>1994 – 2009:</strong> Mitglied des Deutschen Bundestages
-            (mit Unterbrechung nach 2002)
           </p>
 
           <h3>Politische Positionen</h3>
