--- a/cducsu/merz/index.html
+++ b/cducsu/merz/index.html
@@ -48,28 +48,9 @@
           </p>
 
           <h3>Bildung & Berufslaufbahn</h3>
-          <p>
-            <strong>Studium:</strong> Friedrich Merz studierte von 1976 bis 1982
-            Rechtswissenschaften an der Universität Bonn und legte 1985 das
-            Erste Juristische Staatsexamen ab. Anschließend absolvierte er sein
-            Referendariat und legte 1986 das Zweite Juristische Staatsexamen ab.
-          </p>
-
-          <p>
-            <strong>Berufsausbildung und Berufserfahrung:</strong> Merz
-            arbeitete zunächst als Richter am Amtsgericht Saarbrücken, bevor er
-            sich 1989 als Rechtsanwalt niederließ. Von 1995 bis 2009 war er in
-            verschiedenen Führungspositionen bei BlackRock tätig, unter anderem
-            als Aufsichtsratsvorsitzender der deutschen Tochtergesellschaft, was
-            ihm Einfluss in der Wirtschaft verschaffte.
-          </p>
-
-          <p>
-            <strong>Persönliches Leben:</strong> Seit 1981 ist Merz mit
-            Charlotte Merz, einer deutschen Chemikerin und späteren Richterin,
-            verheiratet. Das Paar hat drei Kinder und lebt in Arnsberg im
-            Sauerland.
-          </p>
+          <p><strong>Studium:</strong> Friedrich Merz studierte von 1976 bis 1982 Rechtswissenschaften an der Universität Bonn und legte 1985 das Erste Juristische Staatsexamen ab. Anschließend absolvierte er sein Referendariat und legte 1986 das Zweite Juristische Staatsexamen ab.</p>
+          <p><strong>Berufsausbildung und Berufserfahrung:</strong> Merz arbeitete zunächst als Richter am Amtsgericht Saarbrücken (1986–1989). Ab 1989 war er als Rechtsanwalt tätig, unter anderem von 2002 bis 2004 bei der Kanzlei Cornelius Bartenbach Haesemann und Partner in Köln. Seit 2016 ist er Aufsichtsratsvorsitzender der deutschen Tochtergesellschaft von BlackRock, was ihm erheblichen Einfluss in der Wirtschaft verschaffte.</p>
+          <p><strong>Persönliches Leben:</strong> Seit 1981 ist Merz mit Charlotte Merz, einer deutschen Chemikerin und späteren Richterin, verheiratet. Das Paar hat drei Kinder und lebt in Arnsberg im Sauerland.</p>
 
           <h3>Politische Laufbahn</h3>
           <p>
@@ -92,11 +73,8 @@
           </p>
 
           <h3>Politische Positionen</h3>
-          <p>
-            <strong>Schwerpunkte:</strong> Unklar aufgrund permanenter
-            Änderungen der Standpunkte – von fiskalischer Disziplin zu
-            Neuverschuldung, von harter Migrationspolitik zu offenen Grenzen
-          </p>
+          <p><strong>Schwerpunkte:</strong> Merz’ Standpunkte ändern sich häufig: von fiskalischer Disziplin zu Neuverschuldung, von harter Migrationspolitik zu flexibleren Ansätzen.</p>
+         
           <h3>Highlights</h3>
           <p>
             Im Wahlkampf 2025 versprach Friedrich Merz eine harte Linie bei der
