--- a/usa/musk/index.html
+++ b/usa/musk/index.html
@@ -26,8 +26,11 @@
 
         <!-- Optional: Logo von Tesla oder SpaceX-->
         <a href="https://www.spacex.com">
-          <img src="https://i.imgur.com/spacex-logo.png" <!-- Logo -- />
-          alt="SpaceX-Logo" class="company-logo" />
+          <img
+            src="https://i.imgur.com/spacex-logo.png"
+            alt="SpaceX-Logo"
+            class="company-logo"
+          />
         </a>
       </div>
     </header>
