--- a/usa/musk/index.html
+++ b/usa/musk/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../../styles.css" />
   </head>
   <body class="elon-root">
-    <header class="person-header">
+    <header class="party-header">
       <div class="header-container">
         <!-- Link zurück zur Startseite mit dem factico.-Logo -->
         <a href="../../" class="factico-logo-img">
@@ -21,7 +21,7 @@
         </a>
 
         <div class="header-title-container">
-          <h1 class="person-name">ELON MUSK</h1>
+          <h1 class="party-politician-name">ELON MUSK</h1>
         </div>
 
         <!-- Optional: Logo von Tesla oder SpaceX-->
@@ -34,7 +34,7 @@
         </a>
       </div>
     </header>
-    <section class="person-bio">
+    <section class="party-bio">
       <div class="bio-container">
         <div class="bio-text">
           <p><strong>Name:</strong> Elon Reeve Musk</p>
