--- a/usa/musk/index.html
+++ b/usa/musk/index.html
@@ -24,12 +24,12 @@
           <h1 class="party-politician-name">ELON MUSK</h1>
         </div>
 
-        <!-- Optional: Logo von Tesla oder SpaceX-->
+        <!-- Optional: Logo von Tesla / SpaceX usw.-->
         <a href="https://www.spacex.com">
           <img
-            src="https://i.imgur.com/spacex-logo.png"
-            alt="SpaceX-Logo"
-            class="company-logo"
+            src="https://i.imgur.com/zTarbil.jpg"
+            alt="Musk Companies"
+            class="party-logo"
           />
         </a>
       </div>
