--- a/usa/musk/index.html
+++ b/usa/musk/index.html
@@ -108,7 +108,11 @@
           </p>
         </div>
 
-        <img class="bio-image" src="https://i.imgur.com/.jpg" alt="Elon Musk" />
+        <img
+          class="bio-image"
+          src="https://i.imgur.com/XQQ3xtT.jpg"
+          alt="Elon Musk"
+        />
       </div>
     </section>
 
