--- a/usa/musk/index.html
+++ b/usa/musk/index.html
@@ -167,17 +167,11 @@
           <div class="smallvideo-container">
             <div class="video-wrapper">
               <iframe
-                src="https://www.youtube.com/embed/example-video"
-                <!--
-                Platzhalter,
-                echtes
-                Video
-                einfügen
-                --
-              >
-                title="Elon Musk scheitert in Path of Exile 2 Livestream"
-                frameborder="0" allowfullscreen ></iframe
-              >
+                src="https://www.youtube.com/embed/Tj8r_gLxSz0?si=RPqSmza427x1rvfX"
+                title="Fester mit Wutrede bei Impfdebatte: 'Will meine Freiheit zurück'"
+                frameborder="0"
+                allowfullscreen
+              ></iframe>
             </div>
           </div>
 
@@ -187,10 +181,11 @@
           <p class="party-highlight-source">
             <strong>Quelle:</strong>
             <a
-              href="https://x.com/elonmusk/status/example-tweet"
+              href="https://www.morgenpost.de/panorama/article408074855/elon-musk-soll-in-einem-beliebten-spiel-betrogen-haben.html"
               target="_blank"
-              >Elon Musks X-Post zum Rekord</a
-            >
+              >Berliner Morgenpost: Fake-Gamer? Elon Musk soll in beliebtem
+              Spiel betrogen haben
+            </a>
           </p>
 
           <div class="party-highlight-hashtags">
