--- a/usa/musk/index.html
+++ b/usa/musk/index.html
@@ -167,8 +167,8 @@
           <div class="smallvideo-container">
             <div class="video-wrapper">
               <iframe
-                src="https://www.youtube.com/embed/Tj8r_gLxSz0?si=RPqSmza427x1rvfX"
-                title="Fester mit Wutrede bei Impfdebatte: 'Will meine Freiheit zurück'"
+                src="https://www.youtube.com/embed/7wSdgX3gEsc?si=uTgdbJdzAPziIpeb"
+                title="Das wahre Gesicht von Gamer Elon Musk"
                 frameborder="0"
                 allowfullscreen
               ></iframe>
