--- a/usa/musk/index.html
+++ b/usa/musk/index.html
@@ -122,12 +122,12 @@
 
       <!-- Highlight 1: Videospiel-Lüge -->
       <div class="party-highlight">
-        <h3 class="party-highlight-title">Elon Musk – Die *Diablo IV*-Lüge</h3>
+        <h3 class="party-highlight-title">Elon Musk – Die Gaming-Lüge</h3>
 
         <div class="highlight-skandal-scale">
           <h4>Gaming-Gehabe: 6/10 🎮🎮🎮🎮🎮🎮⚪⚪⚪⚪</h4>
           <p class="highlight-description">
-            Musk prahlte damit, einer der besten *Diablo IV*-Spieler der Welt zu
+            Musk prahlte damit, einer der besten Diablo IV-Spieler der Welt zu
             sein – bis Beweise zeigten, dass andere für ihn spielten und er
             selbst kaum die Basics beherrscht.
           </p>
@@ -145,15 +145,15 @@
         <div class="collapsible-content">
           <p class="party-highlight-description">
             Im November 2024 behauptete Elon Musk im Joe-Rogan-Podcast, er sei
-            unter den Top 20 *Diablo IV*-Spielern weltweit und stellte mit einer
-            Zeit von 1:52 Minuten in *The Pit* (Stufe 150) einen Rekord auf. Auf
-            X feuerte er die Begeisterung mit Posts wie „Ich bin der Beste!“ an.
+            unter den Top 20 Diablo IV-Spielern weltweit und stellte mit einer
+            Zeit von 1:52 Minuten in The Pit (Stufe 150) einen Rekord auf. Auf X
+            feuerte er die Begeisterung mit Posts wie „Ich bin der Beste!“ an.
           </p>
           <p class="party-highlight-description">
             Doch im Januar 2025 platzte die Blase: Musk gab in einer
             Unterhaltung mit YouTuber NikoWrex zu, dass andere Spieler sein
             Konto gelevelt und mit echtem Geld Ausrüstung gekauft hatten. Ein
-            Livestream von *Path of Exile 2* zeigte zudem, wie er grundlegende
+            Livestream von Path of Exile 2 zeigte zudem, wie er grundlegende
             Mechaniken nicht verstand – er übersah Items und kämpfte mit der
             Steuerung.
           </p>
@@ -189,7 +189,6 @@
           </p>
 
           <div class="party-highlight-hashtags">
-            <a href="../">#elonmusk</a>
             <span class="hashtag">#diabloiv</span>
             <span class="hashtag">#gaming</span>
           </div>
