--- a/usa/musk/index.html
+++ b/usa/musk/index.html
@@ -144,24 +144,28 @@
 
         <div class="collapsible-content">
           <p class="party-highlight-description">
-            Im November 2024 behauptete Elon Musk im Joe-Rogan-Podcast, er sei
-            unter den Top 20 Diablo IV-Spielern weltweit und stellte mit einer
-            Zeit von 1:52 Minuten in The Pit (Stufe 150) einen Rekord auf. Auf X
-            feuerte er die Begeisterung mit Posts wie „Ich bin der Beste!“ an.
+            Im Joe-Rogan-Podcast behauptete Musk unter den Top 20 Diablo
+            IV-Spielern weltweit zu sein. Er untermauerte dies mit einem Rekord:
+            1:52 Minuten für The Pit (Stufe 150). Auf X postete er
+            triumphierend: „Ich bin der Beste!“
           </p>
           <p class="party-highlight-description">
-            Doch im Januar 2025 platzte die Blase: Musk gab in einer
-            Unterhaltung mit YouTuber NikoWrex zu, dass andere Spieler sein
-            Konto gelevelt und mit echtem Geld Ausrüstung gekauft hatten. Ein
-            Livestream von Path of Exile 2 zeigte zudem, wie er grundlegende
-            Mechaniken nicht verstand – er übersah Items und kämpfte mit der
-            Steuerung.
+            Januar 2025 – Die Wahrheit kam ans Licht: In einem Gespräch mit
+            YouTuber NikoWrex gab Musk zu, dass andere Spieler sein Konto
+            hochgelevelt und Ausrüstung mit echtem Geld gekauft hatten. Ein
+            Livestream von Path of Exile 2 lieferte weitere Beweise: Musk
+            scheiterte an grundlegenden Mechaniken, übersah Items und wirkte
+            völlig überfordert.
           </p>
           <p class="party-highlight-description">
-            Die Gaming-Community, darunter Streamer wie Quin69, warf ihm vor,
-            seine Fähigkeiten schamlos übertrieben zu haben. Für viele war es
-            ein Beweis, dass Musk sein Image über die Wahrheit stellt – ein
-            Muster, das auch in anderen Bereichen seines Lebens auffällt.
+            Die Reaktion folgte prompt: Streamer wie Quin69 und die
+            Gaming-Community brandmarkten ihn als Lügner. Doch die Affäre wirft
+            größere Fragen auf: Wenn Musk bei etwas so Unwichtigem wie
+            Videospielen maßlos lügt – mit klaren Belegen durch Streams und sein
+            eigenes Eingeständnis –, was soll man ihm dann noch glauben? Ist das
+            ein Muster, sein Image künstlich aufzublähen? Seine Glaubwürdigkeit
+            steht auf dem Spiel, und die Öffentlichkeit fragt: Wie viel von dem,
+            was er sagt, ist echt?
           </p>
 
           <div class="smallvideo-container">
