--- a/usa/musk/index.html
+++ b/usa/musk/index.html
@@ -121,7 +121,7 @@
       <h2 class="party-section-title">Skandale und Kontroversen</h2>
 
       <!-- Highlight 1: Videospiel-Lüge -->
-      <div class="party-highlight">
+      <div class="party-highlight" id="muskgaming">
         <h3 class="party-highlight-title">Elon Musk – Die Gaming-Lüge</h3>
 
         <div class="highlight-skandal-scale">
