--- a/index.html
+++ b/index.html
@@ -87,6 +87,11 @@
             <a href="https://factico.eu/fdp/#fdp-untergang">Mehr lesen</a>
           </li>
         </ul>
+        <li>
+          <strong>Januar 2025:</strong> Elon Musk ist ein Lügner
+          <a href="https://factico.eu/usa/musk/#muskgaming">Mehr lesen</a>
+        </li>
+      </ul>
       </section>
 
       <!-- About Section -->
