--- a/usa/musk/index.html
+++ b/usa/musk/index.html
@@ -128,8 +128,7 @@
           <h4>Gaming-Gehabe: 6/10 🎮🎮🎮🎮🎮🎮⚪⚪⚪⚪</h4>
           <p class="highlight-description">
             Musk prahlte damit, einer der besten Diablo IV-Spieler der Welt zu
-            sein – bis Beweise zeigten, dass andere für ihn spielten und er
-            selbst kaum die Basics beherrscht.
+            sein – bis Beweise die Wahrheit zeigten.
           </p>
         </div>
 
