--- a/index.html
+++ b/index.html
@@ -183,6 +183,43 @@
           </div>
         </div>
       </section>
+
+      <!-- International Personalities Section -->
+      <section
+        id="international-personalities"
+        class="international-personalities"
+      >
+        <div class="content-block">
+          <h2>Persönlichkeiten aus aller Welt</h2>
+          <div class="country-grid" id="countryGrid" role="grid">
+            <a href="https://factico.eu/usa/" class="country-card">
+              <img
+                src="https://i.imgur.com/usa-flag.png"
+                alt="USA Flagge"
+                class="country-flag"
+              />
+              <h3>USA</h3>
+            </a>
+            <!-- Weitere Länder, z. B. -->
+            <a href="https://factico.eu/uk/" class="country-card">
+              <img
+                src="https://i.imgur.com/uk-flag.png"
+                alt="UK Flagge"
+                class="country-flag"
+              />
+              <h3>UK</h3>
+            </a>
+            <a href="https://factico.eu/china/" class="country-card">
+              <img
+                src="https://i.imgur.com/china-flag.png"
+                alt="China Flagge"
+                class="country-flag"
+              />
+              <h3>China</h3>
+            </a>
+          </div>
+        </div>
+      </section>
     </main>
 
     <!-- Footer -->
