--- a/usa/index.html
+++ b/usa/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Elon Musk</title>
+    <title>USA</title>
     <!-- Favicon hinzufügen -->
     <link rel="icon" type="image/png" href="https://i.imgur.com/6Fyu7WL.png" />
     <link rel="stylesheet" href="../../styles.css" />
@@ -21,14 +21,14 @@
         </a>
 
         <div class="header-title-container">
-          <h1 class="party-politician-name">ELON MUSK</h1>
+          <h1 class="party-politician-name">USA</h1>
         </div>
 
         <!-- Optional: Logo von Tesla / SpaceX usw.-->
         <a href="https://www.spacex.com">
           <img
-            src="https://i.imgur.com/zTarbil.jpg"
-            alt="Musk Companies"
+            src="https://i.imgur.com/Qz5B6mW.jpg"
+            alt="USA Flag"
             class="party-logo"
           />
         </a>
@@ -41,7 +41,7 @@
       <div class="personality-grid">
         <a href="https://factico.eu/usa/musk/" class="personality-card">
           <img
-            src="https://i.imgur.com/elon-musk-img.jpg"
+            src="https://i.imgur.com/XQQ3xtT.jpg"
             alt="Elon Musk"
             class="personality-img"
           />
