--- a/index.html
+++ b/index.html
@@ -190,32 +190,15 @@
         class="international-personalities"
       >
         <div class="content-block">
-          <h2>Persönlichkeiten aus aller Welt</h2>
+          <h2>Internationale Persönlichkeiten</h2>
           <div class="country-grid" id="countryGrid" role="grid">
             <a href="https://factico.eu/usa/" class="country-card">
               <img
-                src="https://i.imgur.com/usa-flag.png"
+                src="https://i.imgur.com/Qz5B6mW.png"
                 alt="USA Flagge"
                 class="country-flag"
               />
               <h3>USA</h3>
-            </a>
-            <!-- Weitere Länder, z. B. -->
-            <a href="https://factico.eu/uk/" class="country-card">
-              <img
-                src="https://i.imgur.com/uk-flag.png"
-                alt="UK Flagge"
-                class="country-flag"
-              />
-              <h3>UK</h3>
-            </a>
-            <a href="https://factico.eu/china/" class="country-card">
-              <img
-                src="https://i.imgur.com/china-flag.png"
-                alt="China Flagge"
-                class="country-flag"
-              />
-              <h3>China</h3>
             </a>
           </div>
         </div>
