--- a/usa/index.html
+++ b/usa/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/png" href="https://i.imgur.com/6Fyu7WL.png" />
     <link rel="stylesheet" href="../../styles.css" />
   </head>
-  <body class="elon-root">
+  <body class="usa-root">
     <header class="party-header">
       <div class="header-container">
         <!-- Link zurück zur Startseite mit dem factico.-Logo -->
@@ -25,13 +25,11 @@
         </div>
 
         <!-- Optional: Logo von Tesla / SpaceX usw.-->
-        <a href="https://www.spacex.com">
-          <img
-            src="https://i.imgur.com/Qz5B6mW.jpg"
-            alt="USA Flag"
-            class="party-logo"
-          />
-        </a>
+        <img
+          src="https://i.imgur.com/Qz5B6mW.jpg"
+          alt="USA Flag"
+          class="party-logo"
+        />
       </div>
     </header>
 
